// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Text > copyable work 1`] = `
"<div class="ix-text"><span class="ix-text-inner">@idux 是一套企业级中后台 UI 组件库, 致力于提供高效愉悦的开发体验。 基于 Vue 3.x + TypeScript 开发,
      全部代码开源并遵循 MIT 协议，任何企业、组织及个人均可免费使用。<!----></span>
  <!----><span class="ix-text-copy-icon"><i class="ix-icon ix-icon-copy" role="img" aria-label="copy"></i></span>
  <!---->
  <!---->
  <!---->
  <!---->
</div>"
`;

exports[`Text > copyable work 2`] = `
"<div class="ix-text"><span class="ix-text-inner">@idux 是一套企业级中后台 UI 组件库, 致力于提供高效愉悦的开发体验。 基于 Vue 3.x + TypeScript 开发,
      全部代码开源并遵循 MIT 协议，任何企业、组织及个人均可免费使用。<!----></span>
  <!---->
  <!---->
  <!---->
  <!---->
  <!---->
</div>"
`;

exports[`Text > ellipsis work 1`] = `
"<div class="ix-text"><span class="ix-text-inner">@idux 是一套企业级中后台 UI 组件库, 致力于提供高效愉悦的开发体验。 基于 Vue 3.x + TypeScript 开发,
      全部代码开源并遵循 MIT 协议，任何企业、组织及个人均可免费使用。<!----></span>
  <!---->
  <!---->
  <!---->
  <!---->
  <!---->
</div>"
`;

exports[`Text > ellipsis work 2`] = `
"<div class="ix-text"><span class="ix-text-inner">@idux 是一套企业级中后台 UI 组件库, 致力于提供高效愉悦的开发体验。 基于 Vue 3.x + TypeScript 开发,
      全部代码开源并遵循 MIT 协议，任何企业、组织及个人均可免费使用。<!----></span>
  <!---->
  <!---->
  <!---->
  <!---->
  <!---->
</div>"
`;

exports[`Text > expandable work 1`] = `
"<div class="ix-text ix-text-expandable"><span class="ix-text-inner">@idux 是一套企业级中后台 UI 组件库, 致力于提供高效愉悦的开发体验。 基于 Vue 3.x + TypeScript 开发,
      全部代码开源并遵循 MIT 协议，任何企业、组织及个人均可免费使用。<!----></span>
  <!---->
  <!---->
  <!---->
  <!---->
  <!---->
</div>"
`;

exports[`Text > expandable work 2`] = `
"<div class="ix-text ix-text-expandable"><span class="ix-text-inner">@idux 是一套企业级中后台 UI 组件库, 致力于提供高效愉悦的开发体验。 基于 Vue 3.x + TypeScript 开发,
      全部代码开源并遵循 MIT 协议，任何企业、组织及个人均可免费使用。<!----></span>
  <!---->
  <!---->
  <!---->
  <!---->
  <!---->
</div>"
`;

exports[`Text > render work 1`] = `
"<div class="ix-text"><span class="ix-text-inner">@idux 是一套企业级中后台 UI 组件库, 致力于提供高效愉悦的开发体验。 基于 Vue 3.x + TypeScript 开发,
      全部代码开源并遵循 MIT 协议，任何企业、组织及个人均可免费使用。<!----></span>
  <!---->
  <!---->
  <!---->
  <!---->
  <!---->
</div>"
`;

exports[`Text > tag work 1`] = `
"<div class="ix-text">
  <div class="ix-text-inner">@idux 是一套企业级中后台 UI 组件库, 致力于提供高效愉悦的开发体验。 基于 Vue 3.x + TypeScript 开发,
    全部代码开源并遵循 MIT 协议，任何企业、组织及个人均可免费使用。
    <!---->
  </div>
  <!---->
  <!---->
  <!---->
  <!---->
  <!---->
</div>"
`;

exports[`Text > tag work 2`] = `
"<div class="ix-text"><span class="ix-text-inner">@idux 是一套企业级中后台 UI 组件库, 致力于提供高效愉悦的开发体验。 基于 Vue 3.x + TypeScript 开发,
      全部代码开源并遵循 MIT 协议，任何企业、组织及个人均可免费使用。<!----></span>
  <!---->
  <!---->
  <!---->
  <!---->
  <!---->
</div>"
`;

exports[`Text > tooltip work 1`] = `
"<div class="ix-text"><span class="ix-text-inner">@idux 是一套企业级中后台 UI 组件库, 致力于提供高效愉悦的开发体验。 基于 Vue 3.x + TypeScript 开发,
      全部代码开源并遵循 MIT 协议，任何企业、组织及个人均可免费使用。<!----></span>
  <!---->
  <!---->
  <!---->
  <!---->
  <!---->
</div>"
`;

exports[`Text > tooltip work 2`] = `
"<div class="ix-text"><span class="ix-text-inner">@idux 是一套企业级中后台 UI 组件库, 致力于提供高效愉悦的开发体验。 基于 Vue 3.x + TypeScript 开发,
      全部代码开源并遵循 MIT 协议，任何企业、组织及个人均可免费使用。<!----></span>
  <!---->
  <!---->
  <!---->
  <!---->
  <!---->
</div>"
`;

exports[`Text > tooltip work 3`] = `
"<div class="ix-text"><span class="ix-text-inner">@idux 是一套企业级中后台 UI 组件库, 致力于提供高效愉悦的开发体验。 基于 Vue 3.x + TypeScript 开发,
      全部代码开源并遵循 MIT 协议，任何企业、组织及个人均可免费使用。<!----></span>
  <!---->
  <!---->
  <!---->
  <!---->
  <!---->
</div>"
`;
